<resources>
    <string name="app_name">ProjectView</string>
    <string name="normal_text">Normal Text</string>
    <string name="bold_text">Bold Text</string>
    <string name="italic_text">Italic Text</string>
    <string name="center_text">Center text</string>
    <string name="left_text">Left Text</string>
    <string name="right_text">Right Text</string>
    <string name="text_color">Text Color</string>
    <string name="text_size">Text Size</string>
    <string name="single_line">Single Line</string>
    <string name="coder">Divisi Mobile Coder Institute</string>
    <string name="typeface_text">Typeface Text</string>
    <string name="text_view">Text View</string>
    <string name="edit_text">Edit Text</string>
    <string name="input_text">Input Text</string>
    <string name="password">Password</string>
    <string name="image_view">Image View</string>
    <string name="image_button">Image Button</string>
    <string name="pilih_divisi">Pilih Divisi :</string>
    <string name="divisi_mobile">Divisi Mobile</string>
    <string name="divisi_website">Divisi Website</string>
    <string name="divisi_game">Divisi Game</string>
    <string name="divisi_iot">Divisi IoT</string>
    <string name="submit">Submit</string>
    <string name="checkbox">CheckBox</string>
    <string name="toogle_button">Toogle Button</string>
    <string name="switch_button">Switch Button</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="radio_button">Radio Button</string>
    <string name="progressbar">ProgressBar</string>
    <string name="spinner">Spinner</string>
    <string name="start">Start</string>
    <string name="pilih_kota">Pilih kota :</string>
    <string name="button">Button</string>
    <string name="coder_institute">Coder Institute</string>
</resources>
