<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view" />

    <Button
        android:id="@+id/btn_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text" />


    <Button
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_view" />

    <Button
        android:id="@+id/btn_imgbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button" />

    <Button
        android:id="@+id/btn_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox" />

    <Button
        android:id="@+id/btn_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toogle_button" />

    <Button
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_button" />

    <Button
        android:id="@+id/btn_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button" />

    <Button
        android:id="@+id/btn_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progressbar" />

    <Button
        android:id="@+id/btn_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner" />
</LinearLayout>